fixed white space after zoom out

--- a/styles/_phone.scss
+++ b/styles/_phone.scss
@@ -124,7 +124,7 @@
       position: relative;
       display: block;
       align-self: center;
-      width: 112.5%;
+      width: 100%;
       padding-bottom: 1.93rem;
     }
     div {
